LId tugadi, Oquvchini guruhga 2 marta qoshmidigan boldi, lidsetting forma togirlandi

--- a/src/components/DropSearch/DropSearch.scss
+++ b/src/components/DropSearch/DropSearch.scss
@@ -55,6 +55,8 @@
                transition: all ease 0.5s;
                transform: rotate(180deg);
             }
+
+            
          }
       }
    }
@@ -107,6 +109,9 @@
       // cursor: pointer;
       // display: flex;
       // align-items: center;
+      &.disabled {
+         opacity: 0.4;
+      }
 
       
 
