--- a/src/pages/Settings_Pages/LidFormSettings/LidFormSettings.scss
+++ b/src/pages/Settings_Pages/LidFormSettings/LidFormSettings.scss
@@ -68,6 +68,10 @@
                background-size: contain;
                background-image: url('../../../assets//Icons/fedit.svg');
                margin: 0;
+               
+               &.active {
+                  background-image: url('../../../assets//Icons/petichka.svg');
+               }
             }
          }
       }
