--- a/src/components/HomeComponents/HomeGrafig1/HomeGrafig1.scss
+++ b/src/components/HomeComponents/HomeGrafig1/HomeGrafig1.scss
@@ -94,6 +94,9 @@
    align-items: center;
    margin-left: auto;
    margin-right: auto;
+   @media screen and (max-width: 768px) {
+      width: 100%;
+   }
 }
 
 .izma__graph-order-left {
