--- a/src/pages/Groups/containers/FilterTeachers/FilterTeahers.scss
+++ b/src/pages/Groups/containers/FilterTeachers/FilterTeahers.scss
@@ -12,6 +12,7 @@
       position: relative;
       margin-right: 15px;
       cursor: pointer;
+      opacity: 0.3;
 
       &::before {
          content: '';
@@ -28,6 +29,7 @@
       }
       
       &.checked {
+         opacity: 1;
          &::before {
             background-color: #fff;
          }
