--- a/src/components/Check/check.scss
+++ b/src/components/Check/check.scss
@@ -1,9 +1,16 @@
+
 .check-wrapper{
     padding: 15px 20px;
     background: #FFFFFF;
     border-radius: 4px;
     max-width: 586px;
     box-sizing: border-box;
+
+    @media screen and (max-width: 768px) {
+        max-width: 100%;
+        width: 100%;
+        padding: 0;
+    }
     .check-holder{
         display: flex;
         align-items: center;
@@ -14,6 +21,17 @@
             border: none;
             background-color: transparent;
             cursor: pointer;
+            @media screen and (max-width: 768px) {
+                width: 20px;
+                height: 20px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                img {
+                    width: 20px;
+                    height: 20px;
+                }
+            }
         }
         h1{
             font-family: Jost;
@@ -22,6 +40,10 @@
             font-size: 24px;
             line-height: 35px;
             color: #000000;
+            @media screen and (max-width: 768px) {
+                margin-bottom: 0;
+                font-size: 16px;
+            }
         }
     }
 
