--- a/src/components/Groups/FilterTeachersChecked/FilterTeachersChecked.scss
+++ b/src/components/Groups/FilterTeachersChecked/FilterTeachersChecked.scss
@@ -7,6 +7,7 @@
    margin-right: 15px;
    cursor: pointer;
    display: inline-block;
+   opacity: 0.3;
 
    &::before {
       content: '';
@@ -23,6 +24,7 @@
    }
    
    &.checked {
+      opacity: 1;
       &::before {
          background-color: #fff;
       }
