--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,6 +4,14 @@
    border-bottom: 1px solid #E7E7EC;
    width: 100%;
    height: 75px;
+
+   
+   @media screen and (max-width: 768px) {
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      padding: 0 15px;
+      box-sizing: border-box;
+   }
 }
 
 .izma__header-burger {
@@ -13,6 +21,13 @@
    cursor: pointer;
    width: 50px; 
    height: 50px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+
+    @media screen and (max-width: 768px) {
+       margin-left: 0;
+    }
    
    img {
       width: 50px; 
@@ -35,6 +50,9 @@
    background-repeat: no-repeat;
    background-size: 18px 18px;
    background-position: right calc(96%) center;
+   @media screen and (max-width: 768px) {
+      display: none;
+   }
 }
 
 ::placeholder {
@@ -56,41 +74,63 @@
    align-items: center;
    margin-left: auto;
    position: relative;
-    @media screen and (max-width: 768px) {
-       display: none;
-    }
+   @media screen and (max-width: 768px) {
+      margin-left: 0;
+   }
+    
 }
 
 .izma__header-notification-img {
    width: 20px;
    height: 20px;
    margin-right: 30px;
+   @media screen and (max-width: 768px) {
+      display: none;
+   }
 }
 
-.izma__header-img {
-   width: 50px;
-   height: 50px;
+.accauntHeader {
    display: flex;
    align-items: center;
-   justify-content: center;
-   border-radius: 50%;
-   overflow: hidden;
-   cursor: pointer;
+   justify-content: flex-start;
    margin-right: 50px;
-   border: 1px solid #E7E7EC;
-   box-sizing: border-box;
-   box-shadow: 0px 8px 15px rgba(140, 152, 164, 0.1);
+   h3 {
+      display: none;
+      margin-bottom: 0;
+      margin-left: 10px;
+   }
+   @media screen and (max-width: 768px) {
+      h3 {
+         display: flex;
+      }
+   }
    
-   img {
+   .izma__header-img {
+      width: 50px;
+      height: 50px;
       display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      object-fit: cover;
+      overflow: hidden;
+      cursor: pointer;
+      border: 1px solid #E7E7EC;
+      box-sizing: border-box;
+      box-shadow: 0px 8px 15px rgba(140, 152, 164, 0.1);
+      
+      
+      img {
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         border-radius: 50%;
+         width: 40px;
+         height: 40px;
+         object-fit: cover;
+      }
    }
 }
+
 
 .izma__header-dropdown {
    display: flex;
