--- a/src/components/HomeComponents/HomeGrafig2/HomeGrafig2.scss
+++ b/src/components/HomeComponents/HomeGrafig2/HomeGrafig2.scss
@@ -23,9 +23,16 @@
          display: flex;
          justify-content: space-between;
          align-items: center;
+          @media screen and (max-width: 768px) {
+            flex-direction: column;
+            justify-content: none;
+          }
 
          .left_side {
             width: 45%;
+            @media screen and (max-width: 768px) {
+               display: none;
+            }
 
             .same_days {
                margin-bottom: 80px;
@@ -78,6 +85,9 @@
 
          .right_side {
             width: 50%;
+            @media screen and (max-width: 768px) {
+              width: 100%;
+            }
          }
       }
 
@@ -86,9 +96,16 @@
          display: flex;
          align-items: flex-start;
          width: 100%;
+         @media screen and (max-width: 768px) {
+            flex-direction: column;
+            align-items: center;
+         }
 
          .left_side {
             width: 50%;
+             @media screen and (max-width: 768px) {
+                width: 100%;
+             }
 
             span {
                display: block;
@@ -117,8 +134,12 @@
 
                &.four {
                   background: rgba(25, 4, 255, 0.12);
+                  @media screen and (max-width: 768px) {
+                     width: 100%;
+                  }
 
                   .per_color {
+                     
                      width: 45%;
                      background: #7367F0;
                   }
@@ -127,6 +148,9 @@
                &.one {
                   background: rgba(234, 84, 85, 0.12);
                   border-radius: 7px;
+                  @media screen and (max-width: 768px) {
+                     width: 100%;
+                  }
 
                   .per_color {
                      width: 65%;
@@ -138,6 +162,9 @@
 
          .right_side {
             width: 50%;
+            @media screen and (max-width: 768px) {
+               width: 100%;
+            }
 
             span {
                display: block;
@@ -167,6 +194,9 @@
                &.two {
                   background: rgba(255, 159, 67, 0.12);
                   border-radius: 7px;
+                  @media screen and (max-width: 768px) {
+                     width: 100%;
+                  }
 
                   .per_color {
                      width: 70%;
