--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -35,6 +35,11 @@
       display: flex;
       flex-direction: column;
 
+      @media screen and (max-width: 768px) {
+         width: 90%;
+         padding: 0 20px 20px 20px;
+      }
+
       &-header {
          display: flex;
          align-items: center;
@@ -42,6 +47,9 @@
          padding: 20px 0;
          border-bottom: 1px solid #090761;
          margin-bottom: 20px;
+         @media screen and (max-width: 768px) {
+            padding-bottom: 10px;
+         }
 
          h2 {
             font-size: 17px;
@@ -94,6 +102,12 @@
 
          display: flex;
          flex-direction: column;
+
+         h2 {
+            @media screen and (max-width: 768px) {
+               font-size: 16px;
+            }
+         }
 
           .addGroup-row {
              margin-bottom: 20px;
@@ -163,6 +177,10 @@
                border: 1px solid red;
 
               
+            }
+
+            @media screen and (max-width: 768px) {
+               padding: 5px 25px;
             }
             
             
