--- a/src/components/NavbarComponents/Navbar/Navbar.scss
+++ b/src/components/NavbarComponents/Navbar/Navbar.scss
@@ -1,4 +1,3 @@
-
 .navbar_wrapper {
    width: 100%;
    // box-sizing: border-box;
@@ -19,68 +18,120 @@
       margin-left: 5px;
    }
 
-   @media screen and (max-width: 1023px) {
-      
-   }
-   
-   .navbar_links-logo  {
+   @media screen and (max-width: 1023px) {}
+
+   .navbar_links-logo {
       display: flex;
       align-items: center;
    }
 
    &.active {
-      @media screen and (max-width: 1023px) {
-         
+      .navbar_wrapper-header {
+         padding: 0;
+         display: flex;
+         align-items: center;
+         justify-content: center;
       }
+      @media screen and (max-width: 1023px) {
+         .navbar_wrapper-header {
+            padding: 0;
+            display: flex;
+          justify-content: space-between;
+          padding-left: 50px;
+          padding-right: 10px;
+         }
+      }
+
+      @media screen and (max-width: 768px) {
+         .navbar_wrapper-header {
+            padding-left: 20px;
+         }
+      }
+
       .defualt_logo {
          display: flex;
-         
+
       }
-      
+
       .active_logo {
          display: none;
+
          @media screen and (max-width: 1023px) {
             display: flex;
          }
 
-         
+
+      }
+      .boxLinks {
+         @media screen and (max-width: 1023px) {
+            width: 100%;
+            overflow-y: scroll;
+         }
       }
 
       .navbar-plus {
          position: absolute;
          top: 0;
          width: 300px;
-         left: 102%;
+         left: 101%;
          height: 100vh;
 
+         @media screen and (max-width: 1023px) {
+            left: 100%;
+            border-left: 1px solid #E7E7EC;
+         }
+
+          @media screen and (max-width: 768px) {
+             width: 50%;
+             left: 50%;
+          }
+
       }
-      
-      
+
+
 
       .navbar_wrapper-center {
          padding: 0 10px;
          padding-top: 30px;
+
          @media screen and (max-width: 1023px) {
             padding: 0 50px;
             padding-top: 30px;
-          }
+         }
+
+         @media screen and (max-width: 768px) {
+            padding: 0 20px;
+            padding-top: 30px;
+            width: 100%;
+
+            .boxLinks {
+               width: 50%;
+            }
+         }
+
          .navbar_bloks,
          .navbar_links {
             display: flex;
             align-items: center;
             justify-content: center;
+
+            
+
             .open_navbar {
                display: flex;
                align-items: center;
                justify-content: center;
+
                @media screen and (max-width: 1023px) {
                   justify-content: flex-start;
                }
-               
+
                .link__text {
                   display: none;
+
                   @media screen and (max-width: 1023px) {
                      display: flex;
+                     margin-left: 5px;
                   }
                }
             }
@@ -96,14 +147,63 @@
       height: 75px;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
+      padding-left: 50px;
+
       @media screen and (max-width: 1023px) {
-         justify-content: flex-start;
-         padding: 0 50px;
+         justify-content: space-between;
+         padding-left: 50px;
+         padding-right: 10px;
       }
+       @media screen and (max-width: 768px) {
+          padding: 0 20px; 
+          justify-content: space-between;
+       }
+
+       .izma__navbar--burger {
+          display: none;
+          width: 50px;
+          height: 40px;
+          position: relative;
+          background: #4A8F9F;
+          border: none;
+          outline: none;
+          border-radius: 4px;
+          align-items: center;
+          justify-content: center;
+
+          @media screen and (max-width: 1023px) {
+               display: flex;
+          }
+
+          span {
+             position: absolute;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+
+             &::before {
+               content: "";
+               position: absolute;
+               width: 25px;
+               height: 1px;
+               background: white;
+               transform: rotate(45deg);
+            }
+            
+            &::after {
+               content: "";
+               position: absolute;
+               width: 25px;
+               height: 1px;
+               background: white;
+               transform: rotate(-45deg);
+             }
+          }
+       }
 
    }
-   
+
    &-center {
       height: calc(100% - 75px);
       padding: 0 50px;
@@ -114,10 +214,15 @@
          position: absolute;
          top: 0;
          width: 100%;
-         left: 100%;
+         left: 101%;
          z-index: 1000000;
          height: 100vh;
          display: none;
+
+         @media screen and (max-width: 768px) {
+            left: 50%;
+         }
+
          &.active {
             display: flex;
          }
