--- a/src/components/StudentComponents/StudentFilterCheck/StudentFilterCheck.scss
+++ b/src/components/StudentComponents/StudentFilterCheck/StudentFilterCheck.scss
@@ -6,7 +6,7 @@
    position: relative;
    margin-right: 15px;
    cursor: pointer;
-
+   opacity: 0.3;
    &::before {
       content: '';
       position: absolute;
@@ -22,6 +22,7 @@
    }
    
    &.checked {
+      opacity: 1;
       &::before {
          background-color: #fff;
       }
