--- a/src/components/StudentComponents/StudentFilterDebtors/StudentFilterDebtors.scss
+++ b/src/components/StudentComponents/StudentFilterDebtors/StudentFilterDebtors.scss
@@ -11,6 +11,7 @@
         position: relative;
         margin-right: 15px;
         cursor: pointer;
+        opacity: 0.3;
         &::before{
             content: '';
             position: absolute;
@@ -26,6 +27,7 @@
         }
         
         &.checked{
+            opacity: 1;
             &::before {
                 background-color: #fff;
             }
