--- a/src/components/TableBlock/TableBlock.scss
+++ b/src/components/TableBlock/TableBlock.scss
@@ -54,6 +54,10 @@
 
         &:nth-child(5) {
            width: 10%;
+            img {
+               width: 30px;
+               height: 30px;
+            }
 
         }
 
