--- a/src/pages/Courses/Courses.scss
+++ b/src/pages/Courses/Courses.scss
@@ -2,4 +2,7 @@
    display: flex;
    flex-direction: column;
    padding-top: 30px;
+    @media screen and (max-width: 768px) {
+      padding: 0;
+    }
 }
