--- a/src/pages/Groups/GroupProfil/GroupProfil.scss
+++ b/src/pages/Groups/GroupProfil/GroupProfil.scss
@@ -12,6 +12,9 @@
    text-transform: capitalize;
    margin-right: 35px;
    color: #2F2D51;
+   @media screen and (max-width: 768px) {
+      font-size: 22px;
+   }
 }
 
 .izma__groups-attendence-title {
@@ -26,6 +29,9 @@
 .izma__groups-attendence-wrapper {
    display: flex;
    margin-top: 50px;
+   @media screen and (max-width: 768px) {
+      margin-top: 20px;
+   }
 
    @media screen and (max-width: 1023px) {
       flex-direction: column;
@@ -40,5 +46,6 @@
     @media screen and (max-width: 1023px) {
        margin-top: 30px;
        width: 100%;
+       overflow-x: scroll;
     }
 }
