--- a/src/pages/Groups/containers/GroupProfilLeft/GroupProfilLeft.scss
+++ b/src/pages/Groups/containers/GroupProfilLeft/GroupProfilLeft.scss
@@ -5,6 +5,11 @@
    padding: 28px;
    margin-right: 50px;
    width: 370px;
+   @media screen and (max-width: 768px) {
+      width: 100%;
+      margin-right: 0;
+      padding: 10px;
+   }
 }
 
 .izma__groups-attendance-left-center-communicate-wrapper {
@@ -32,6 +37,12 @@
    margin-bottom: 0;
    min-width: 220px;
    max-width: 220px;
+    @media screen and (max-width: 768px) {
+       max-width: auto;
+       min-width: auto;
+       font-size: 16px;
+       
+    }
 }
 
 .izma__groups-attendance-boxses {
@@ -280,6 +291,11 @@
    height: 20px;
    background-color: #fff;
    cursor: pointer;
+   @media screen and (max-width: 768px) {
+      width: 20px;
+      height: 10px;
+      padding: 2px 10px;
+   }
 
    &:hover {
       background: #090761;
@@ -306,6 +322,11 @@
       align-items: center;
       justify-content: center;
 
+      @media screen and (max-width: 768px) {
+         width: 3px;
+         height: 3px
+      }
+
       &::before {
          content: "";
          position: absolute;
@@ -314,8 +335,13 @@
          border-radius: 50%;
          background: black;
          transform: translateX(-8px);
+         @media screen and (max-width: 768px) {
+            width: 3px;
+            height: 3px;
+            transform: translateX(-6px);
+         }
       }
-
+      
       &::after {
          content: "";
          position: absolute;
@@ -324,6 +350,11 @@
          border-radius: 50%;
          background: black;
          transform: translateX(8px);
+         @media screen and (max-width: 768px) {
+            width: 3px;
+            height: 3px;
+            transform: translateX(6px);
+         }
       }
    }
 
@@ -377,6 +408,11 @@
       box-sizing: content-box;
       position: relative;
       outline: none;
+
+        @media screen and (max-width: 768px) {
+           font-size: 14px ;
+           line-height: 15px;
+        }
    }
 
 
@@ -393,6 +429,10 @@
 
    .content-tabs {
       flex-grow: 1;
+      width: 100%;
+      overflow-x: scroll;
+
+      
    }
 
    .content {
@@ -438,6 +478,12 @@
       top: 0;
       right: -257px;
 
+      @media screen and (max-width: 768px) {
+         left: -220px;
+         width: 217px;
+         height: 202px;
+      }
+
       &.active {
          display: block;
       }
@@ -452,6 +498,10 @@
          margin-bottom: 10px;
          color: #000000;
          margin-bottom: 10px;
+         @media screen and (max-width: 768px) {
+           font-size: 14px;
+           margin-bottom: 5px;
+         }
       }
 
       .del_link--red {
@@ -467,6 +517,11 @@
          margin-bottom: 10px;
          margin-bottom: 10px;
          margin-top: 22px;
+          @media screen and (max-width: 768px) {
+             font-size: 14px;
+             margin-bottom: 5px;
+             margin-top: 15px;
+          }
       }
    }
 
