--- a/src/pages/Home/containers/RoomsTableWrapper/RoomsTableWrapper.scss
+++ b/src/pages/Home/containers/RoomsTableWrapper/RoomsTableWrapper.scss
@@ -123,6 +123,7 @@
    box-shadow: 0px 8px 15px rgba(140, 152, 164, 0.1);
    border-radius: 4px;
    padding: 48px 22px 88px 33px;
+       
 }
 
 .table_name {
@@ -140,8 +141,11 @@
 
 .table_navbar {
    width: 100%;
+
    margin-bottom: 34px;
    border-bottom: 1px solid #E7E7EC;
+   overflow-x: scroll;
+   min-height: 50px;
 
    .inner-navbar {
       max-width: 540px;
