--- a/src/pages/Lids/Lids.scss
+++ b/src/pages/Lids/Lids.scss
@@ -60,6 +60,11 @@
    width: 60px;
    height: 60px;
    margin: 35px;
+   @media screen and (max-width: 1023px) {
+      width: 30px;
+      height: 30px;
+      margin: 10px;
+   }
 }
 
 .izma__links-box-link {
@@ -71,6 +76,14 @@
    margin-bottom: 0;
    @media screen and (max-width: 1023px) {
       width: calc(100% - 150px);
+   }
+   
+   @media screen and (max-width: 1023px) {
+      font-size: 16px;
+      width: calc(100% - 50px);
+      a {
+         font-size: 16px;
+      }
    }
 }
 
