--- a/src/pages/Lids/LidsContent/LidsContent.scss
+++ b/src/pages/Lids/LidsContent/LidsContent.scss
@@ -7,6 +7,11 @@
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
+
+   @media screen and (max-width: 1023px) {
+      flex-direction: column;
+      justify-content: none;
+   }
    
 }
 
@@ -17,6 +22,10 @@
    align-items: center;
    flex-direction: column;
    width: 30% !important;
+   @media screen and (max-width: 1023px) {
+      width: 100% !important;
+      margin-bottom: 20px;
+   }
 }
 
 .status1 {
