--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -11,6 +11,13 @@
    align-items: center;
    justify-content: center;
 
+   @media screen and (max-width: 768px) {
+      overflow-y: scroll;
+      height: 100%;
+      justify-content: none;
+   }
+
+
    .boxLogin {
       width: 670px;
 
@@ -21,10 +28,15 @@
          padding: 0 20px;
 
       }
+
    }
 
    .inner {
       width: 100%;
+      @media screen and (max-width: 768px) {
+         margin-top: 40px;
+      }
+
 
       .banner {
          width: 100%;
@@ -101,6 +113,11 @@
             width: 100%;
 
          }
+         @media screen and (max-width: 768px) {
+            padding: 0;
+            box-shadow: none;
+         }
+
 
          .right_part {
             margin-right: 38px;
@@ -109,6 +126,11 @@
             align-items: center;
             justify-content: center;
             position: relative;
+             @media screen and (max-width: 768px) {
+                width: 100%;
+                margin-right: 0;
+                margin-bottom: 10px;
+             }
 
 
 
