--- a/src/pages/Moliya_Pages/CoursesPayment/CoursesPayment.scss
+++ b/src/pages/Moliya_Pages/CoursesPayment/CoursesPayment.scss
@@ -10,6 +10,11 @@
    line-height: 43px;
    color: #000000;
    margin-right: 28px;
+   @media screen and (max-width: 768px) {
+     font-size: 20px;
+     margin-bottom: 0;
+     line-height: 25px;
+   }
 }
 
 .izma__finance-payment-groups-title {
@@ -17,6 +22,12 @@
    font-size: 20px;
    line-height: 29px;
    color: #000000;
+   @media screen and (max-width: 768px) {
+      font-size: 17px;
+      margin-bottom: 0;
+      line-height: 17px;
+      color: #9493B4;
+   }
 }
 
 // ============
@@ -41,6 +52,12 @@
    color: #FFFFFF;
    padding: 25px;
    color: #fff;
+   @media screen and (max-width: 768px) {
+      font-size: 12px;
+      margin-bottom: 0;
+      line-height: 17px;
+      color: #9493B4;
+   }
 }
 
 .izma__finance-payment-right-tabs-second-img {
