--- a/src/pages/Moliya_Pages/Finance/Finance.scss
+++ b/src/pages/Moliya_Pages/Finance/Finance.scss
@@ -3,6 +3,9 @@
    flex-direction: column;
    padding:30px 0 0 0 ;
    background-color: var(--background-main);
+   @media screen and (max-width: 768px) {
+      padding: 0;
+   }
 }
 
 .izma__finance-allpaymet-up {
@@ -21,6 +24,10 @@
    line-height: 43px;
    text-transform: capitalize;
    color: #2F2D51;
+   @media screen and (max-width: 768px) {
+     font-size: 22px;
+     margin-bottom: 0;
+   }
 }
 
 .izma__finance-allpayment-up-wrapper {
@@ -100,11 +107,19 @@
 .izma__finance-allpayment-up-dates {
    display: flex;
    align-items: center;
+   @media screen and (max-width: 768px) {
+      flex-direction: column;
+      width: 100% !important;
+      align-items: flex-start;
+   }
 
    .ant-picker {
       border: none;
       width: 350px !important;
       padding: 0;
+      @media screen and (max-width: 768px) {
+        width: 100% !important;
+      }
    }
 
    .ant-picker-input {
@@ -113,6 +128,9 @@
       background: #FFFFFF;
       box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.08);
       border-radius: 5px;
+      @media screen and (max-width: 768px) {
+         width: 50% !important;
+      }
    }
 
    .izma__finance-allpayment-up-dates-btn {
@@ -128,5 +146,9 @@
       background-color: #ffffff;
       color: #090761;
       margin-left: 80px;
+      @media screen and (max-width: 768px) {
+         margin-left: 0;
+         margin-top: 20px;
+      }
    }
 }
