--- a/src/pages/Moliya_Pages/Salary/containers/SalaryUp/SalaryUp.scss
+++ b/src/pages/Moliya_Pages/Salary/containers/SalaryUp/SalaryUp.scss
@@ -24,6 +24,9 @@
             font-size: 20px;
             line-height: 29px;
             color: #222222;
+            @media screen and (max-width: 768px) {
+               font-size: 17px;
+            }
          }
       }
 
@@ -45,6 +48,9 @@
             color: #FFFFFF;
             margin-right: 16px;
             margin-bottom: 0;
+            @media screen and (max-width: 768px) {
+               font-size: 20px;
+            }
          }
 
          .text {
@@ -55,6 +61,10 @@
             line-height: 27px;
             color: #FFFFFF;
             margin-bottom: 0;
+            @media screen and (max-width: 768px) {
+               font-size: 12px;
+               line-height: 17px;
+            }
          }
       }
 
@@ -72,6 +82,12 @@
                & + button {
                   margin-top: 20px;
                }
+            }
+
+            @media screen and (max-width: 768px) {
+               width: 100%;
+               margin-right: 0;
+               margin-top: 10px;
             }
          }
 
@@ -105,6 +121,11 @@
                width: 25%;
                @media screen and (max-width: 1023px) {
                   width: 40%;
+               }
+
+               @media screen and (max-width: 768px) {
+                  width: 100%;
+                  margin-right: 0;
                }
 
                select {
@@ -155,6 +176,11 @@
                    margin-right: 0 !important;
                 }
 
+                @media screen and (max-width: 768px) {
+                   flex-direction: column-reverse;
+                   border: none;
+                }
+
                input {
                   width: 65%;
                   padding: 15px 10px 14px 10px;
@@ -162,6 +188,13 @@
                   box-sizing: border-box;
                   border: none;
                   outline: none;
+                  @media screen and (max-width: 768px) {
+                     border: 1px solid #B7B7B7;
+                     box-sizing: border-box;
+                     border-radius: 4px;
+                     margin-top: 20px;
+                     width: 100%;
+                  }
 
                  
                }
@@ -174,6 +207,10 @@
                   border: none;
                   outline: none;
                   background: #CCCBED;
+                  @media screen and (max-width: 768px) {
+                     width: 100%;
+                     border-radius: 4px;
+                  }
                }
             }
 
