--- a/src/pages/Settings_Pages/EnterForm/EnterForm.scss
+++ b/src/pages/Settings_Pages/EnterForm/EnterForm.scss
@@ -92,8 +92,11 @@
          @media only screen and (max-width: 800px) {
             flex-direction: column;
             width: 100%;
+            padding: 16px;
 
          }
+
+         
 
          .right_part1 {
             margin-right: 38px;
@@ -105,6 +108,14 @@
             justify-content: center;
             position: relative;
 
+            @media screen and (max-width: 768px) {
+               margin-bottom: 10px;
+               margin-right: 0;
+               width: 100%;
+               max-width: 100%;
+               min-width: 100%;
+            }
+
 
 
             img {
@@ -114,6 +125,9 @@
                height: auto;
                object-fit: contain;
                border-radius: 7px;
+               @media screen and (max-width: 768px) {
+                  width: 100%;
+               }
             }
          }
 
@@ -138,6 +152,10 @@
                   font-size: 24px;
                   line-height: 35px;
                   color: #000000;
+                  @media only screen and (max-width: 800px) {
+                     font-size: 20px;
+
+                  }
                }
 
                button {
@@ -245,6 +263,9 @@
    padding: 20px 20px;
    margin-left: auto;
    margin-right: auto;
+   @media screen and (max-width: 768px) {
+      padding: 0;
+   }
 }
 
 .lang button {
