--- a/src/pages/Settings_Pages/LidFormSettings/LidFormSettings.scss
+++ b/src/pages/Settings_Pages/LidFormSettings/LidFormSettings.scss
@@ -1,5 +1,8 @@
 .lidFormm2 {
    padding: 30px;
+   @media screen and (max-width: 768px) {
+      padding: 0;
+   }
 
    .phoneInput {
       &:hover {
@@ -31,6 +34,9 @@
          box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
          border-radius: 7px;
          margin-bottom: 30px;
+         @media screen and (max-width: 768px) {
+            padding: 16px;
+         }
 
          .top_iteems1 {
             display: flex;
@@ -41,6 +47,19 @@
             h3 {
                padding-top: 9px;
                margin-right: 130px;
+               @media screen and (max-width: 768px) {
+                  margin-right: 0;
+                  width: 50%;
+                  padding: 0;
+                  font-size: 14px;
+                  margin-bottom: 0;
+                  margin-right: 10px;
+               }
+            }
+            img {
+               @media screen and (max-width: 768px) {
+                  width: 50%;
+               }
             }
 
             p {
@@ -72,6 +91,11 @@
                &.active {
                   background-image: url('../../../assets//Icons/petichka.svg');
                }
+
+               @media screen and (max-width: 768px) {
+                  width: 40px;
+                  height: 40px;
+               }
             }
          }
       }
@@ -82,6 +106,9 @@
          border-radius: 7px;
          margin-bottom: 30px;
          opacity: 0.4;
+         @media screen and (max-width: 768px) {
+            padding: 16px;
+         }
 
          .name_label1 {
             font-family: "Jost";
@@ -129,6 +156,10 @@
          color: #FFFFFF;
          padding: 15px 38px;
          margin-top: 22px;
+         @media screen and (max-width: 768px) {
+           font-size: 16px;
+           padding: 8px 25px;
+         }
       }
    }
 }
