--- a/src/pages/Settings_Pages/Roadmap/roadmap.scss
+++ b/src/pages/Settings_Pages/Roadmap/roadmap.scss
@@ -1,5 +1,13 @@
 .settings{
+
+    @media screen and (max-width: 1023px) {
+        width: 100%;
+        overflow-x: scroll;
+    }
     .inner{
+        @media screen and (max-width: 1023px) {
+            min-width: 850px;
+        }
         padding: 45px 30px;
         background: var(--background-main);
         border: 1px solid #E7E7EC;
