--- a/src/pages/Students/StudentProfil/StudentProfil.scss
+++ b/src/pages/Students/StudentProfil/StudentProfil.scss
@@ -17,6 +17,10 @@
    display: flex;
    align-items: center;
    padding-top: 0;
+   @media screen and (max-width: 768px) {
+      flex-direction: column;
+      align-items: flex-start;
+   }
 }
 
 // ==============
@@ -29,6 +33,14 @@
       box-sizing: border-box;
       border-bottom: 1px solid rgba(9, 7, 97, 0.25);
       border-radius: 4px;
+      @media screen and (max-width: 768px) {
+         box-shadow: none;
+         border: none;
+         border-bottom: 2px solid rgba(9, 7, 97, 0.25);
+         background: transparent;
+         border-radius: 0;
+         margin-top: 15px;
+      }
    }
 
    .tabs {
@@ -45,11 +57,41 @@
       box-sizing: content-box;
       position: relative;
       outline: none;
+      @media screen and (max-width: 768px) {
+         font-size: 16px;
+         background: transparent;
+         margin-bottom: 0;
+         line-height:16px;
+         position: relative;
+         margin-right: 10px;
+         padding: 5px 0;
+
+          &::before {
+             content: "";
+             position: absolute;
+             width: 100%;
+             height: 2px;
+             left: 0;
+             right: 0;
+             height: 2px;
+             border-radius: 50px;
+             bottom: -2px;
+
+             background: transparent;
+          }
+      }
    }
 
 
    .active-tabs {
       color: #B1614F;
+      @media screen and (max-width: 768px) {
+        
+
+         &::before {
+            background: #B1614F;
+         }
+      }
    }
 
 
