--- a/src/pages/Students/containers/StudnetProfileRight/StudentProfileRight.scss
+++ b/src/pages/Students/containers/StudnetProfileRight/StudentProfileRight.scss
@@ -55,7 +55,11 @@
    font-weight: 600;
    font-size: 24px;
    line-height: 35px;
-   color: #222222
+   color: #222222;
+   @media screen and (max-width: 768px) {
+      font-size: 22px;
+   }
+
 }
 
 .izma__students-payment-inner-left-section-center-wrapper-inner-left {
@@ -83,6 +87,10 @@
 .izma__students-payment-inner-left-section-center-wrapper-inner-left {
    display: flex;
    align-items: center;
+   @media screen and (max-width: 450px) {
+      flex-direction: column;
+      width: 100%;
+   }
 }
 
 .izma__students-payment-inner-left-section-center-wrapper-inner-right {
@@ -106,9 +114,20 @@
    a {
       display: flex;
       align-items: center;
+      @media screen and (max-width: 450px) {
+         flex-direction: column;
+         width: 100%;
+      }
 
       .izma__students-payment-inner-left-section-center-wrapper-inner-right {
          margin-left: 40px;
+         @media screen and (max-width: 450px) {
+           justify-content: space-between;
+           margin-top: 10px;
+            margin-left: 0;
+            align-items: flex-start;
+            width: 100%;
+         }
       }
    }
 }
@@ -119,6 +138,9 @@
    background: #FFFFFF;
    border-radius: 5px;
        text-align: center;
+       @media screen and (max-width: 768px) {
+          font-size: 14px;
+       }
 }
 
 .izma__students-payment-inner-left-section-center-wrapper-left-name {
@@ -130,6 +152,14 @@
    margin-left: 22px;
    color: #222222;
    margin-bottom: 0;
+    @media screen and (max-width: 768px) {
+       font-size: 14px;
+       
+    }
+    @media screen and (max-width: 450px) {
+       margin-left: 0;
+       margin-top: 10px;
+    }
 }
 
 .izma__students-payment-inner-left-section-center-wrapper-left-date {
@@ -148,7 +178,11 @@
    line-height: 20px;
    width: 62px;
    margin-left: 25px;
-   color: #797979
+   color: #797979;
+   @media screen and (max-width: 450px) {
+      margin-left: 0;
+      width: auto;
+   }
 }
 
 .izma__students-payment-inner-left-section-bottom-heading {
@@ -158,7 +192,10 @@
    font-weight: 600;
    font-size: 24px;
    line-height: 35px;
-   color: #222222
+   color: #222222;
+    @media screen and (max-width: 450px) {
+       font-size: 22px;
+    }
 }
 
 // ===========================
