--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
    width: 100%;
    height: 75px;
 
-   
+
    @media screen and (max-width: 768px) {
       flex-direction: row-reverse;
       justify-content: space-between;
@@ -19,18 +19,18 @@
    border: none;
    margin-left: 20px;
    cursor: pointer;
-   width: 50px; 
+   width: 50px;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
 
-    @media screen and (max-width: 768px) {
-       margin-left: 0;
-    }
-   
+   @media screen and (max-width: 768px) {
+      margin-left: 0;
+   }
+
    img {
-      width: 50px; 
+      width: 50px;
       height: 50px;
    }
 }
@@ -50,6 +50,7 @@
    background-repeat: no-repeat;
    background-size: 18px 18px;
    background-position: right calc(96%) center;
+
    @media screen and (max-width: 768px) {
       display: none;
    }
@@ -74,16 +75,18 @@
    align-items: center;
    margin-left: auto;
    position: relative;
+
    @media screen and (max-width: 768px) {
       margin-left: 0;
    }
-    
+
 }
 
 .izma__header-notification-img {
    width: 20px;
    height: 20px;
    margin-right: 30px;
+
    @media screen and (max-width: 768px) {
       display: none;
    }
@@ -94,17 +97,19 @@
    align-items: center;
    justify-content: flex-start;
    margin-right: 50px;
+
    h3 {
       display: none;
       margin-bottom: 0;
       margin-left: 10px;
    }
+
    @media screen and (max-width: 768px) {
       h3 {
          display: flex;
       }
    }
-   
+
    .izma__header-img {
       width: 50px;
       height: 50px;
@@ -117,8 +122,8 @@
       border: 1px solid #E7E7EC;
       box-sizing: border-box;
       box-shadow: 0px 8px 15px rgba(140, 152, 164, 0.1);
-      
-      
+
+
       img {
          display: flex;
          align-items: center;
@@ -145,37 +150,46 @@
    transform: translateY(-10%);
    transition: all ease 0.5s;
    opacity: 0;
+
    
+   @media screen and (max-width: 768px) {
+      width: 150px;
+   }
+
    &.active {
       z-index: 1000000;
       opacity: 1;
       transform: translateY(0);
       transition: all ease 0.5s;
    }
-   
+
    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
+
    span {
       padding: 5px;
+
       &:hover {
          background: #E7E7EC;
          cursor: pointer;
       }
    }
-   
+
    a {
       padding: 5px;
+
       &:hover {
          color: black;
          cursor: pointer;
          background: #E7E7EC;
       }
+
       color: black;
    }
 }
 
 
 .top_items {
-   
+
    display: flex;
    justify-content: space-between;
    align-items: center;
@@ -189,7 +203,8 @@
       color: #000000;
    }
 
-   button, button b{
+   button,
+   button b {
       border: none;
       background-color: transparent;
       font-family: "Jost";
@@ -204,7 +219,7 @@
       &:hover {
          color: #605edd;
       }
-      
+
       &.active {
          color: #605edd;
       }
