--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,4 +1,5 @@
 .myModal {
+   
    position: fixed;
    left: 0;
    top: 0;
@@ -9,7 +10,7 @@
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.582);
-   z-index: 1000000000;
+       z-index: 1000;
    display: flex;
    transform: scale(0) translateY(-50%);
 
